samples/_failures_safe/1761129231_e59a39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71e39b27.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_71e39b27.c:125:5: error: expected declaration or statement at end of input
  125 |     return det;
      |     ^~~~~~
